--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <base href="reyramos.github.io/ngDemoApp/">
+    <base href="//reyramos.github.io/ngDemoApp/">
     <title>Angular2-RC5 With Webpack2.0.0-beta20</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
