--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <my-app>Loading...</my-app>
-<script type="text/javascript" src="/polyfills.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
-<script type="text/javascript" src="/vendor.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
-<script type="text/javascript" src="/app.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
+<script type="text/javascript" src="polyfills.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
+<script type="text/javascript" src="vendor.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
+<script type="text/javascript" src="app.3f22737fcb5e585541f6.js?3f22737fcb5e585541f6"></script>
 </body>
 </html>
