--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <my-app>Loading...</my-app>
-<script type="text/javascript" src="polyfills.899f1ac9a8b9bfd993f1.js?899f1ac9a8b9bfd993f1"></script>
+<!--<script type="text/javascript" src="polyfills.899f1ac9a8b9bfd993f1.js?899f1ac9a8b9bfd993f1"></script>-->
 <script type="text/javascript" src="vendor.899f1ac9a8b9bfd993f1.js?899f1ac9a8b9bfd993f1"></script>
 <script type="text/javascript" src="app.899f1ac9a8b9bfd993f1.js?899f1ac9a8b9bfd993f1"></script>
 </body>
